[tool.poetry]
name = "notion-agent"
version = "0.1.0"
description = "A Notion-powered assistant"
authors = ["JCoriaPro <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.0"
openai = "^1.0.0"
requests = "^2.31.0"
notion-client = "^2.2.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
